<resources>
    <string name="app_name">Android1</string>
    <string name="projectName">Android1 project</string>
    <string name="Param1">Внесите параметр 1</string>
    <string name="Param2">Внесите параметр 2</string>
    <string name="result">Результат</string>
    <string name="resultOut">Вывод результата</string>
    <string name="checkbox1">Настройки 1</string>
    <string name="checkbox2">Настройки 2</string>
    <string name="textOn">Вкл</string>
    <string name="textOff">Выкл</string>
    <string name="singUp">Зарегистрируйтесь</string>
    <string name="name">Введите ваше имя</string>
    <string name="phone">Ваш номер телефона</string>
    <string name="passp">Номер ваего дома</string>
    <string name="password">Придумайте пароль</string>
    <string name="eMail">Ваш e-mail</string>
    <string name="bt_confirm">Подтвердить</string>
    <string name="change">switch</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="brecets">()</string>
    <string name="procent">%</string>
    <string name="multy">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="divide">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="oposit">-/+</string>
    <string name="point">,</string>
    <string name="resoult">=</string>
    <string name="textOn">Вкл</string>
    <string name="textOff">Выкл</string>
    <string name="singUp">Зарегистрируйтесь</string>
    <string name="name">Введите ваше имя</string>
    <string name="phone">Ваш номер телефона</string>
    <string name="passp">Номер ваего дома</string>
    <string name="password">Придумайте пароль</string>
    <string name="eMail">Ваш e-mail</string>
    <string name="bt_confirm">Подтвердить</string>
    <string name="change">Switch</string>
</resources>