<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_sky"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="vertical"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView
            android:id="@+id/tvProjName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/projectName"
            android:textColor="@color/black"
            android:textSize="@dimen/projName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvData1"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Param1"
            android:textSize="@dimen/tvText"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etData1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:gravity="center"
                android:hint="@string/Param1"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/eTextIn" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvData2"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Param2"
            android:textSize="@dimen/tvText"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etData2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nocolor"
                android:gravity="center"
                android:hint="@string/Param2"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/eTextIn" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="@dimen/tvText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resultOut"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/eTextOut" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox1" />

    <CheckBox
        android:id="@+id/chB2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTogg"
                    android:layout_width="192dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_launcher_on_foreground" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/textOff"
                    android:textOn="@string/textOn" />
            </LinearLayout>

            <CalendarView
                android:id="@+id/calendarView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>